--- a/addons/vector_ai/settings.json
+++ b/addons/vector_ai/settings.json
@@ -1,7 +1,8 @@
 {
+  "api_key": "AIzaSyArlvZ3E9fcqcb_nNCnabSj4RRjGbUWE7g",
   "model": "gemini-1.5-pro",
   "temperature": 0.7,
   "max_output_tokens": 2048,
-  "dev_mode": false,
+  "dev_mode": true,
   "proxy_url": "https://vector-ai-proxy.example.com/api/gemini"
 }
