--- a/addons/vector_ai/settings.json
+++ b/addons/vector_ai/settings.json
@@ -1,6 +1,6 @@
 {
   "api_key": "AIzaSyArlvZ3E9fcqcb_nNCnabSj4RRjGbUWE7g",
-  "model": "gemini-1.5-pro",
+  "model": "gemini-2.5-flash-preview-04-17",
   "temperature": 0.7,
   "max_output_tokens": 2048,
   "dev_mode": true,
