Complete rebuild of Vector AI plugin with simplified approach

--- a/test_project/addons/vector_ai/plugin.cfg
+++ b/test_project/addons/vector_ai/plugin.cfg
@@ -1,6 +1,7 @@
 [plugin]
+
 name="Vector AI"
-description="AI assistant for Godot that can modify scenes based on natural language prompts"
+description="AI-powered code generation for Godot"
 author="Vector AI"
-version="1.0.0"
-script="vector_ai_plugin.gd"
+version="1.0"
+script="vector_ai.gd"
